[package]
name = "velnora_logger_cli"
version = "0.0.0"
edition = "2024"

[lib]
name = "velnora_logger_cli"
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "2.0.1"

[dependencies]
velnora_logger_core = { path = "../core" }
napi = { version = "2.16.17", features = ["tokio_rt"] }
napi-derive = "2.16.13"
chrono = "0.4.41"
